--- a/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
+++ b/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
@@ -173,7 +173,7 @@
    "source": [
     "tf.random.set_random_seed(219)\n",
     "batch_size = 32\n",
-    "max_epochs = 5\n",
+    "max_epochs = 10\n",
     "\n",
     "# for train\n",
     "N = len(train_data)\n",
@@ -210,8 +210,20 @@
    },
    "outputs": [],
    "source": [
-    "model = tf.keras.models.Sequential()\n",
-    "\n",
+    "model = tf.keras.models.Sequential()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-11T06:45:39.259037Z",
+     "start_time": "2019-03-11T06:45:39.250463Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Adds a densely-connected layer with 64 units to the model:\n",
     "#model.add(layers.Dense(64, activation='relu'))\n",
     "# Add another:\n",
@@ -317,8 +329,10 @@
    },
    "outputs": [],
    "source": [
+    "print(\"start training!\")\n",
     "global_step = tf.Variable(0, trainable=False)\n",
     "num_batches_per_epoch = int(N / batch_size)\n",
+    "\n",
     "for epoch in range(max_epochs):\n",
     "  for step, (images, labels) in enumerate(train_dataset):\n",
     "    start_time = time.time()\n",
@@ -340,7 +354,7 @@
     "      epochs = epoch + step / float(num_batches_per_epoch)\n",
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration)\n",
-    "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g} ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
+    "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
     "          epochs, global_step.numpy(), loss_value.numpy(), acc_value.numpy()*100, examples_per_sec, duration))\n",
     "      \n",
     "  # save mean accuracy for plot\n",
@@ -421,7 +435,7 @@
     "  predictions = model(images, training=False)\n",
     "  accuracy(labels, predictions)\n",
     "  \n",
-    "print(\"test accuracy: {:.4g}\".format(accuracy.result()))"
+    "print(\"test accuracy: {:.4g}%\".format(accuracy.result()))"
    ]
   },
   {
