--- a/tf.version.2/02.regression/02.mnist.model.fit.ipynb
+++ b/tf.version.2/02.regression/02.mnist.model.fit.ipynb
@@ -349,7 +349,7 @@
     "# loss\n",
     "print(\"loss value: {:.3f}\".format(results[0]))\n",
     "# accuracy\n",
-    "print(\"accuracy value: {:.3f}\".format(results[1]))"
+    "print(\"accuracy value: {:.4f}%\".format(results[1]*100))"
    ]
   },
   {
