--- a/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
+++ b/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
@@ -32,6 +32,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -119,6 +120,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_label(image, label):\n",
+    "  label = tf.one_hot(label, depth=10)\n",
+    "  return image, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-11T07:09:50.239047Z",
@@ -127,19 +139,22 @@
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(219)\n",
+    "tf.random.set_random_seed(219)\n",
     "batch_size = 32\n",
-    "max_epochs = 10\n",
+    "max_epochs = 1\n",
     "\n",
     "# for train\n",
-    "train_dataset = tf.data.Dataset.from_tensor_slices((train_data[:500], train_labels[:500]))\n",
-    "train_dataset = train_dataset.shuffle(buffer_size = 10000)\n",
-    "train_dataset = train_dataset.batch(batch_size = batch_size)\n",
+    "N = len(train_data)\n",
+    "train_dataset = tf.data.Dataset.from_tensor_slices((train_data, train_labels))\n",
+    "train_dataset = train_dataset.shuffle(buffer_size=10000)\n",
+    "train_dataset = train_dataset.map(one_hot_label)\n",
+    "train_dataset = train_dataset.batch(batch_size=batch_size)\n",
     "print(train_dataset)\n",
     "\n",
     "# for test\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((test_data, test_labels))\n",
-    "test_dataset = test_dataset.batch(batch_size = batch_size)\n",
+    "test_dataset = test_dataset.map(one_hot_label)\n",
+    "test_dataset = test_dataset.batch(batch_size=batch_size)\n",
     "print(test_dataset)"
    ]
   },
@@ -163,16 +178,27 @@
    },
    "outputs": [],
    "source": [
-    "model = tf.keras.Sequential([\n",
-    "  layers.Conv2D(filters=32, kernel_size=[5, 5],\n",
-    "                padding='same', activation='relu'),\n",
-    "  layers.MaxPool2D(),\n",
-    "  layers.Conv2D(filters=64, kernel_size=[5, 5],\n",
-    "                padding='same', activation='relu'),\n",
-    "  layers.MaxPool2D(),\n",
-    "  layers.Flatten(),\n",
-    "  layers.Dense(1024, activation='relu'),\n",
-    "  layers.Dense(10, activation='softmax')])"
+    "model = tf.keras.Sequential()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-11T07:09:50.263008Z",
+     "start_time": "2019-03-11T07:09:50.245169Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model.add(layers.Conv2D(filters=32, kernel_size=[5, 5], padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPool2D())\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=[5, 5], padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPool2D())\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(1024, activation='relu'))\n",
+    "model.add(layers.Dense(10, activation='softmax'))"
    ]
   },
   {
@@ -188,7 +214,8 @@
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  print(\"predictions: \", model(images[0:3]).shape)"
+    "  predictions = model(images[0:1], training=False)\n",
+    "  print(\"Predictions: \", predictions.numpy())"
    ]
   },
   {
@@ -211,7 +238,24 @@
    "source": [
     "## Train a model\n",
     "\n",
-    "### Define a optimizer"
+    "### Define loss and accuray functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_object = tf.keras.losses.CategoricalCrossentropy()\n",
+    "acc_object = tf.keras.metrics.CategoricalAccuracy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define optimizer"
    ]
   },
   {
@@ -227,10 +271,9 @@
    "source": [
     "# use Adam optimizer \n",
     "optimizer = tf.train.AdamOptimizer(1e-4)\n",
-    "#optimizer = tf.keras.optimizers.Adam(1e-4)\n",
     "\n",
     "# record loss and accuracy for every epoch\n",
-    "mean_loss = tf.keras.metrics.Mean(\"loss\", )\n",
+    "mean_loss = tf.keras.metrics.Mean(\"loss\")\n",
     "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
     "\n",
     "# save loss and accuracy history for plot\n",
@@ -256,31 +299,35 @@
    },
    "outputs": [],
    "source": [
-    "global_step = tf.train.get_or_create_global_step()\n",
     "print(\"start training!\")\n",
+    "global_step = tf.Variable(0, trainable=False)\n",
+    "num_batches_per_epoch = int(N / batch_size)\n",
+    "\n",
     "for epoch in range(max_epochs):\n",
+    "  \n",
     "  for step, (images, labels) in enumerate(train_dataset):\n",
     "    start_time = time.time()\n",
+    "    \n",
     "    with tf.GradientTape() as tape:\n",
     "      predictions = model(images, training=True)\n",
-    "      #loss_value = tf.losses.sparse_softmax_cross_entropy(labels, logits)\n",
-    "      loss_value = tf.reduce_mean(tf.keras.losses.sparse_categorical_crossentropy(labels, predictions))\n",
-    "      acc_value = tf.reduce_mean(tf.keras.metrics.categorical_accuracy(labels, tf.argmax(predictions, axis=1)))\n",
+    "      loss_value = loss_object(labels, predictions)\n",
+    "      acc_value = acc_object(labels, predictions)\n",
     "\n",
-    "    grads = tape.gradient(loss_value, model.variables)\n",
-    "    optimizer.apply_gradients(zip(grads, model.variables),\n",
-    "                              global_step=global_step)\n",
-    "\n",
+    "    grads = tape.gradient(loss_value, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
+    "    global_step.assign_add(1)\n",
+    "    \n",
     "    mean_loss(loss_value)\n",
     "    mean_accuracy(acc_value)\n",
     "    loss_history.append((global_step.numpy(), mean_loss.result().numpy()))\n",
     "\n",
     "    if global_step.numpy() % 10 == 0:\n",
     "      clear_output(wait=True)\n",
+    "      epochs = epoch + step / float(num_batches_per_epoch)\n",
     "      duration = time.time() - start_time\n",
-    "      examples_per_sec = batch_size / float(duration)\n",
-    "      epochs = epoch + step * batch_size / float(len(train_data))\n",
-    "      print(\"epochs: {:.2f}, step: {}, loss: {:g}, ({:.2f} examples/sec; {:.3f} sec/batch)\".format(epochs, global_step.numpy(), loss_value, examples_per_sec, duration))\n",
+    "      examples_per_sec = batch_size / float(duration) \n",
+    "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
+    "          epochs, global_step.numpy(), loss_value.numpy(), acc_value.numpy()*100, examples_per_sec, duration))\n",
     "      \n",
     "  # save mean accuracy for plot\n",
     "  accuracy_history.append((global_step.numpy(), mean_accuracy.result().numpy()))\n",
@@ -362,7 +409,7 @@
     "  predictions = model(images, training=False)\n",
     "  accuracy(labels, tf.argmax(predictions, axis=1))\n",
     "  \n",
-    "print(\"test accuracy: {:.3f}\".format(accuracy.result()))"
+    "print(\"test accuracy: {:.4g}%\".format(accuracy.result()))"
    ]
   },
   {
