--- a/tf.version.2/03.cnn/05.transfer.learning.ipynb
+++ b/tf.version.2/03.cnn/05.transfer.learning.ipynb
@@ -37,6 +37,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"-1\" # this statement and below codes are the same effects.\n",
+    "from tensorflow.compat.v1 import ConfigProto\n",
+    "from tensorflow.compat.v1 import InteractiveSession\n",
+    "\n",
+    "config = ConfigProto()\n",
+    "config.gpu_options.allow_growth = True\n",
+    "session = InteractiveSession(config=config)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
