refactoring 03.cnn and add imagenet.classname

--- a/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
+++ b/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
@@ -55,7 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"-1\" # this statement and below codes are the same effects.\n",
     "from tensorflow.compat.v1 import ConfigProto\n",
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
@@ -315,7 +314,7 @@
    "outputs": [],
    "source": [
     "print(\"start training!\")\n",
-    "global_step = tf.Variable(0, trainable=False)\n",
+    "global_step = 0\n",
     "num_batches_per_epoch = int(N / batch_size)\n",
     "\n",
     "for epoch in range(max_epochs):\n",
@@ -328,24 +327,24 @@
     "      loss_value = loss_object(labels, predictions)\n",
     "      acc_value = acc_object(labels, predictions)\n",
     "\n",
-    "    grads = tape.gradient(loss_value, model.trainable_variables)\n",
-    "    optimizer.apply_gradients(zip(grads, model.trainable_variables))\n",
-    "    global_step.assign_add(1)\n",
+    "    gradients = tape.gradient(loss_value, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+    "    global_step += 1\n",
     "    \n",
     "    mean_loss(loss_value)\n",
     "    mean_accuracy(acc_value)\n",
-    "    loss_history.append((global_step.numpy(), mean_loss.result().numpy()))\n",
+    "    loss_history.append((global_step, mean_loss.result().numpy()))\n",
     "\n",
-    "    if global_step.numpy() % 10 == 0:\n",
+    "    if global_step % 10 == 0:\n",
     "      clear_output(wait=True)\n",
     "      epochs = epoch + step / float(num_batches_per_epoch)\n",
     "      duration = time.time() - start_time\n",
     "      examples_per_sec = batch_size / float(duration) \n",
     "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
-    "          epochs, global_step.numpy(), loss_value.numpy(), acc_value.numpy()*100, examples_per_sec, duration))\n",
+    "          epochs, global_step, mean_loss.result().numpy(), mean_accuracy.result().numpy()*100, examples_per_sec, duration))\n",
     "      \n",
     "  # save mean accuracy for plot\n",
-    "  accuracy_history.append((global_step.numpy(), mean_accuracy.result().numpy()))\n",
+    "  accuracy_history.append((global_step, mean_accuracy.result().numpy()))\n",
     "\n",
     "  # clear the history\n",
     "  mean_accuracy.reset_states()\n",
@@ -418,13 +417,11 @@
    },
    "outputs": [],
    "source": [
-    "accuracy = tf.keras.metrics.Accuracy()\n",
-    "\n",
     "for images, labels in test_dataset:\n",
     "  predictions = model(images, training=False)\n",
-    "  accuracy(labels, tf.argmax(predictions, axis=1))\n",
+    "  acc_object(labels, predictions)\n",
     "  \n",
-    "print(\"test accuracy: {:.4g}%\".format(accuracy.result()))"
+    "print(\"test accuracy: {:.4g}%\".format(acc_object.result() * 100))"
    ]
   },
   {
