--- a/tf.version.2/03.cnn/05.transfer.learning.ipynb
+++ b/tf.version.2/03.cnn/05.transfer.learning.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transfer Learning (VGG16)"
+    "# Transfer Learning with VGG16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import modules"
    ]
   },
   {
@@ -16,6 +23,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -42,7 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"-1\" # this statement and below codes are the same effects.\n",
     "from tensorflow.compat.v1 import ConfigProto\n",
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
@@ -176,6 +183,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check training variables before freezing\n",
+    "for var in model.trainable_variables:\n",
+    "  print(var.name)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,16 +234,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Freeze vgg16 conv base part (means that trainable option is False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Freeze vgg16 conv base part (means that trainable option is False)\n",
     "for layer in model.layers:\n",
     "  if layer.name == 'vgg16':\n",
     "    layer.trainable = False\n",
     "  print(\"variable name: {}, trainable: {}\".format(layer.name, layer.trainable))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Freeze weights from conv1_1 to conv4_3 on vgg16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conv_base.trainable = True\n",
+    "# set_trainable = False\n",
+    "# for layer in conv_base.layers:\n",
+    "#   if layer.name == 'block5_conv1':\n",
+    "#     set_trainable = True\n",
+    "#   if set_trainable:\n",
+    "#     layer.trainable = True\n",
+    "#   else:\n",
+    "#     layer.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check training variables after freezing\n",
+    "for var in model.trainable_variables:\n",
+    "  print(var.name)"
    ]
   },
   {
