--- a/tf.version.2/03.cnn/03.mnist.LeNet5.with.regularization.ipynb
+++ b/tf.version.2/03.cnn/03.mnist.LeNet5.with.regularization.ipynb
@@ -34,6 +34,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -56,7 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"-1\" # this statement and below codes are the same effects.\n",
     "from tensorflow.compat.v1 import ConfigProto\n",
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
@@ -136,6 +136,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_label(image, label):\n",
+    "  label = tf.one_hot(label, depth=10)\n",
+    "  return image, label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-27T13:56:20.526599Z",
@@ -149,13 +160,16 @@
     "max_epochs = 1\n",
     "\n",
     "# for train\n",
+    "N = len(train_data)\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices((train_data, train_labels))\n",
     "train_dataset = train_dataset.shuffle(buffer_size = 10000)\n",
+    "train_dataset = train_dataset.map(one_hot_label)\n",
     "train_dataset = train_dataset.batch(batch_size = batch_size)\n",
     "print(train_dataset)\n",
     "\n",
     "# for test\n",
     "test_dataset = tf.data.Dataset.from_tensor_slices((test_data, test_labels))\n",
+    "test_dataset = test_dataset.map(one_hot_label)\n",
     "test_dataset = test_dataset.batch(batch_size = batch_size)\n",
     "print(test_dataset)"
    ]
@@ -175,14 +189,15 @@
    "source": [
     "* Use `tf.keras.Sequential()` API (01.mnist.LeNet5.ipynb)\n",
     "```python\n",
-    "model = tf.keras.Sequential([\n",
-    "  layers.Conv2D(filters=32, kernel_size=[5, 5], padding='same', activation='relu'),\n",
-    "  layers.MaxPool2D(),\n",
-    "  layers.Conv2D(filters=64, kernel_size=[5, 5], padding='same', activation='relu'),\n",
-    "  layers.MaxPool2D(),\n",
-    "  layers.Flatten(),\n",
-    "  layers.Dense(1024, activation='relu'),\n",
-    "  layers.Dense(10)])```"
+    "model = tf.keras.Sequential()\n",
+    "model.add(layers.Conv2D(filters=32, kernel_size=[5, 5], padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPool2D())\n",
+    "model.add(layers.Conv2D(filters=64, kernel_size=[5, 5], padding='same', activation='relu'))\n",
+    "model.add(layers.MaxPool2D())\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(1024, activation='relu'))\n",
+    "model.add(layers.Dense(10, activation='softmax'))\n",
+    "```"
    ]
   },
   {
@@ -215,7 +230,7 @@
     "    self.drop1 = layers.Dropout(rate=0.6)\n",
     "    self.dense2 = layers.Dense(units=10, kernel_regularizer=tf.keras.regularizers.l2(self.l2_decay))\n",
     "\n",
-    "  def call(self, inputs, training=True):\n",
+    "  def call(self, inputs, training=False):\n",
     "    \"\"\"Run the model.\"\"\"\n",
     "    self.conv1_ = self.conv1(inputs)\n",
     "    self.conv1_bn_ = self.conv1_bn(self.conv1_, training=training)\n",
@@ -264,7 +279,8 @@
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  print(\"Logits: \", model(images[0:3], training=False).shape)"
+    "  predictions = model(images[0:1])\n",
+    "  print(\"Predictions: \", predictions.numpy())"
    ]
   },
   {
@@ -287,6 +303,23 @@
    "source": [
     "## Train a model\n",
     "\n",
+    "### Define loss and accuray functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_object = tf.keras.losses.CategoricalCrossentropy()\n",
+    "acc_object = tf.keras.metrics.CategoricalAccuracy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Define a optimizer"
    ]
   },
@@ -301,10 +334,20 @@
    },
    "outputs": [],
    "source": [
+    "# use Adam optimizer \n",
     "optimizer = tf.train.AdamOptimizer(1e-4)\n",
+    "\n",
+    "# record loss and accuracy for every epoch\n",
+    "mean_ce = tf.keras.metrics.Mean(\"cross_entropy\")\n",
+    "mean_l2 = tf.keras.metrics.Mean(\"l2_loss\")\n",
+    "mean_total_loss = tf.keras.metrics.Mean(\"total_loss\")\n",
+    "mean_accuracy = tf.keras.metrics.Mean(\"accuracy\")\n",
+    "\n",
+    "# save loss and accuracy history for plot\n",
     "cross_entropy_history = []\n",
     "l2_loss_history = []\n",
-    "total_loss_history = []"
+    "total_loss_history = []\n",
+    "accuracy_history = [(0, 0.0)]"
    ]
   },
   {
@@ -325,30 +368,51 @@
    },
    "outputs": [],
    "source": [
-    "global_step = tf.train.get_or_create_global_step()\n",
+    "print(\"start training!\")\n",
+    "global_step = 0\n",
+    "num_batches_per_epoch = int(N / batch_size)\n",
+    "\n",
     "for epoch in range(max_epochs):\n",
-    "  for images, labels in train_dataset:\n",
+    "  \n",
+    "  for step, (images, labels) in enumerate(train_dataset):\n",
     "    start_time = time.time()\n",
+    "    \n",
     "    with tf.GradientTape() as tape:\n",
-    "      logits = model(images, training=True)\n",
-    "      cross_entropy = tf.losses.sparse_softmax_cross_entropy(labels, logits)\n",
+    "      predictions = model(images, training=True)\n",
+    "      cross_entropy = loss_object(labels, predictions)\n",
     "      l2_loss = tf.reduce_sum(model.losses)\n",
     "      total_loss = cross_entropy + l2_loss\n",
-    "\n",
-    "    cross_entropy_history.append(cross_entropy.numpy())\n",
-    "    l2_loss_history.append(l2_loss.numpy())\n",
-    "    total_loss_history.append(total_loss.numpy())\n",
+    "      acc_value = acc_object(labels, predictions)\n",
+    "      \n",
+    "    gradients = tape.gradient(total_loss, model.trainable_variables)\n",
+    "    optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+    "    global_step += 1\n",
     "    \n",
-    "    grads = tape.gradient(total_loss, model.variables)\n",
-    "    optimizer.apply_gradients(zip(grads, model.variables),\n",
-    "                              global_step=global_step)\n",
+    "    mean_ce(cross_entropy)\n",
+    "    mean_l2(l2_loss)\n",
+    "    mean_total_loss(total_loss)\n",
+    "    mean_accuracy(acc_value)\n",
+    "    \n",
+    "    cross_entropy_history.append((global_step, mean_ce.result().numpy()))\n",
+    "    l2_loss_history.append((global_step, mean_l2.result().numpy()))\n",
+    "    loss_history.append((global_step, mean_total_loss.result().numpy()))\n",
     "\n",
-    "    if global_step.numpy() % 10 == 0:\n",
+    "    if global_step % 10 == 0:\n",
     "      clear_output(wait=True)\n",
+    "      epochs = epoch + step / float(num_batches_per_epoch)\n",
     "      duration = time.time() - start_time\n",
-    "      examples_per_sec = batch_size / float(duration)\n",
-    "      epochs = batch_size * global_step.numpy() / float(len(train_data))\n",
-    "      print(\"epochs: {:.2f}, step: {}, loss: {:g}, ({:.2f} examples/sec; {:.3f} sec/batch)\".format(epochs, global_step.numpy(), total_loss, examples_per_sec, duration))\n",
+    "      examples_per_sec = batch_size / float(duration) \n",
+    "      print(\"epochs: {:.2f}, step: {}, loss: {:.4g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
+    "          epochs, global_step, mean_total_loss.result().numpy(), mean_accuracy.result().numpy()*100, examples_per_sec, duration))\n",
+    "      \n",
+    "  # save mean accuracy for plot\n",
+    "  accuracy_history.append((global_step, mean_accuracy.result().numpy()))\n",
+    "\n",
+    "  # clear the history\n",
+    "  mean_ce.reset_states()\n",
+    "  mean_l2.reset_states()\n",
+    "  mean_total_loss.reset_states()\n",
+    "  mean_accuracy.reset_states()\n",
     "\n",
     "print(\"training done!\")"
    ]
@@ -423,13 +487,11 @@
    },
    "outputs": [],
    "source": [
-    "accuracy = tf.contrib.eager.metrics.Accuracy()\n",
-    "\n",
     "for images, labels in test_dataset:\n",
-    "  logits = model(images, training=False)\n",
-    "  accuracy(labels=labels, predictions=tf.cast(tf.argmax(logits, 1), tf.int32))\n",
+    "  predictions = model(images)\n",
+    "  acc_object(labels, predictions)\n",
     "  \n",
-    "print(\"test accuracy: {}\".format(accuracy.result()))"
+    "print(\"test accuracy: {:.4g}%\".format(acc_object.result() * 100))"
    ]
   },
   {
@@ -637,9 +699,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
