--- a/tf.version.2/03.cnn/04.vgg16.ipynb
+++ b/tf.version.2/03.cnn/04.vgg16.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,6 +23,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import sys\n",
@@ -39,7 +47,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"-1\" # this statement and below codes are the same effects.\n",
     "from tensorflow.compat.v1 import ConfigProto\n",
     "from tensorflow.compat.v1 import InteractiveSession\n",
     "\n",
@@ -112,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### General method (`include_top=True`) "
+    "### General method (`include_top=True`)"
    ]
   },
   {
@@ -131,6 +138,13 @@
    "outputs": [],
    "source": [
     "vgg16_1.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General method (`include_top=False`)"
    ]
   },
   {
@@ -235,7 +249,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('prediction index: {}'.format(tf.argmax(prediction, axis=1)[0]))"
+    "pred_index = tf.argmax(prediction, axis=1)[0]\n",
+    "print('prediction index: {}'.format(pred_index))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read a label file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_names = []\n",
+    "with open('../../datasets/imagnet.classname.txt', 'r') as f:\n",
+    "  for line in f.readlines():\n",
+    "    category_names.append(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_names[pred_index]"
    ]
   },
   {
@@ -449,9 +492,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
