--- a/tf.version.2/02.regression/02.mnist.model.fit.ipynb
+++ b/tf.version.2/02.regression/02.mnist.model.fit.ipynb
@@ -22,7 +22,7 @@
     "  for step in num_batches: # num_batches = int(data_size / batch_size)\n",
     "    1. sampling mini-batches with batch_size\n",
     "      1-1. data augmentation [if you need (actually always)]\n",
-    "    2. calculate the predictions # predictions = f(x)\n",
+    "    2. calculate the predictions # predictions = model(x)\n",
     "    3. calculate the loss # loss = loss(labels, predictions)\n",
     "    4. calculate the gradient with respect to weights\n",
     "    5. update weights\n",
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "# without training, just inference a model in eager execution:\n",
-    "predictions = model(train_data[0:1], training=False)\n",
+    "predictions = model(train_data[0:1])\n",
     "print(\"Predictions: \", predictions.numpy())"
    ]
   },
