--- a/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
+++ b/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
@@ -339,7 +339,7 @@
     "      clear_output(wait=True)\n",
     "      epochs = epoch + step / float(num_batches_per_epoch)\n",
     "      duration = time.time() - start_time\n",
-    "      examples_per_sec = batch_size / float(duration) \n",
+    "      examples_per_sec = batch_size / float(duration)\n",
     "      print(\"epochs: {:.2f}, step: {}, loss: {:.3g}, accuracy: {:.4g}% ({:.2f} examples/sec; {:.4f} sec/batch)\".format(\n",
     "          epochs, global_step, mean_loss.result().numpy(), mean_accuracy.result().numpy()*100, examples_per_sec, duration))\n",
     "      \n",
@@ -347,6 +347,7 @@
     "  accuracy_history.append((global_step, mean_accuracy.result().numpy()))\n",
     "\n",
     "  # clear the history\n",
+    "  mean_loss.reset_states()\n",
     "  mean_accuracy.reset_states()\n",
     "\n",
     "print(\"training done!\")"
