--- a/tf.version.2/04.rnn/03.sentiment.classfication.imdb.ipynb
+++ b/tf.version.2/04.rnn/03.sentiment.classfication.imdb.ipynb
@@ -31,6 +31,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -321,7 +322,7 @@
     "model.add(layers.Embedding(vocab_size, 16))\n",
     "#model.add(layers.SimpleRNN(units=32, return_sequences=True))\n",
     "model.add(layers.SimpleRNN(units=16))\n",
-    "model.add(layers.Dense(1, activation=tf.nn.sigmoid))\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))\n",
     "\n",
     "model.summary()"
    ]
@@ -346,7 +347,7 @@
    "source": [
     "model.compile(optimizer=tf.train.AdamOptimizer(),\n",
     "              loss='binary_crossentropy',\n",
-    "              metrics=['acc'])"
+    "              metrics=['accuracy'])"
    ]
   },
   {
