--- a/tf.version.2/04.rnn/04.text.generation.ipynb
+++ b/tf.version.2/04.rnn/04.text.generation.ipynb
@@ -30,6 +30,7 @@
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
     "from __future__ import print_function\n",
+    "from __future__ import unicode_literals\n",
     "\n",
     "import os\n",
     "import time\n",
