--- a/tf.version.2/03.cnn/03.mnist.LeNet5.with.regularization.ipynb
+++ b/tf.version.2/03.cnn/03.mnist.LeNet5.with.regularization.ipynb
@@ -228,7 +228,8 @@
     "                               kernel_regularizer=tf.keras.regularizers.l2(self.l2_decay))\n",
     "    self.dense1_bn = layers.BatchNormalization()\n",
     "    self.drop1 = layers.Dropout(rate=0.6)\n",
-    "    self.dense2 = layers.Dense(units=10, kernel_regularizer=tf.keras.regularizers.l2(self.l2_decay))\n",
+    "    self.dense2 = layers.Dense(units=10, activation='softmax',\n",
+    "                               kernel_regularizer=tf.keras.regularizers.l2(self.l2_decay))\n",
     "\n",
     "  def call(self, inputs, training=False):\n",
     "    \"\"\"Run the model.\"\"\"\n",
@@ -247,9 +248,10 @@
     "    self.dense1_bn_ = self.dense1_bn(self.dense1_, training=training)\n",
     "    self.dense1_ = tf.nn.relu(self.dense1_bn_)\n",
     "    self.drop1_ = self.drop1(self.dense1_, training=training)\n",
-    "    self.logits_ = self.dense2(self.drop1_)\n",
     "    \n",
-    "    return self.logits_"
+    "    self.predictions_ = self.dense2(self.drop1_)\n",
+    "    \n",
+    "    return self.predictions_"
    ]
   },
   {
@@ -395,7 +397,7 @@
     "    \n",
     "    cross_entropy_history.append((global_step, mean_ce.result().numpy()))\n",
     "    l2_loss_history.append((global_step, mean_l2.result().numpy()))\n",
-    "    loss_history.append((global_step, mean_total_loss.result().numpy()))\n",
+    "    total_loss_history.append((global_step, mean_total_loss.result().numpy()))\n",
     "\n",
     "    if global_step % 10 == 0:\n",
     "      clear_output(wait=True)\n",
@@ -440,7 +442,7 @@
     "plt.subplot(1, 3, 1)\n",
     "plt.subplots_adjust(hspace = 0.5, wspace = 0.3)\n",
     "#plt.set_title(\"cross_entropy\")\n",
-    "plt.plot(cross_entropy_history, label='cross_entopy')\n",
+    "plt.plot(*zip(*cross_entropy_history), label='cross_entopy')\n",
     "plt.xlabel('Number of steps')\n",
     "plt.ylabel('Loss value [cross entropy]')\n",
     "plt.legend()\n",
@@ -448,7 +450,7 @@
     "plt.subplot(1, 3, 2)\n",
     "plt.subplots_adjust(hspace = 0.5, wspace = 0.3)\n",
     "#plt.set_title(\"l2_loss\")\n",
-    "plt.plot(l2_loss_history, label='l2_loss')\n",
+    "plt.plot(*zip(*l2_loss_history), label='l2_loss')\n",
     "plt.xlabel('Number of steps')\n",
     "plt.ylabel('Loss value [l2 loss]')\n",
     "plt.legend()\n",
@@ -456,7 +458,7 @@
     "plt.subplot(1, 3, 3)\n",
     "plt.subplots_adjust(hspace = 0.5, wspace = 0.3)\n",
     "#plt.set_title(\"total_loss\")\n",
-    "plt.plot(total_loss_history, label='total_loss')\n",
+    "plt.plot(*zip(*total_loss_history), label='total_loss')\n",
     "plt.xlabel('Number of steps')\n",
     "plt.ylabel('Total loss value [cross entropy + l2 loss]')\n",
     "plt.legend()\n",
@@ -621,7 +623,7 @@
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  print(\"Logits: \", model(images[10:11], training=False).shape)"
+    "  print(\"Predictions: \", model(images[10:11], training=False))"
    ]
   },
   {
@@ -679,7 +681,7 @@
    "source": [
     "# without training, just inference a model in eager execution:\n",
     "for images, labels in train_dataset.take(1):\n",
-    "  print(\"Logits: \", model(images[10:11], training=True).shape)"
+    "  print(\"Predictions: \", model(images[10:11], training=True))"
    ]
   },
   {
