--- a/tf.version.2/03.cnn/05.transfer.learning.ipynb
+++ b/tf.version.2/03.cnn/05.transfer.learning.ipynb
@@ -373,7 +373,7 @@
     "  print(\"Number of {} class: for train: {} / for validation: {} / for test: {}\".format(name,\n",
     "                                                                len(os.listdir(train_path)),\n",
     "                                                                len(os.listdir(val_path)),\n",
-    "                                                                len(os.listdir(train_path))))\n",
+    "                                                                len(os.listdir(test_path))))\n",
     "  num_train += len(os.listdir(train_path))\n",
     "  num_val += len(os.listdir(val_path))\n",
     "  num_test += len(os.listdir(test_path))\n",
